package Structural.Bridge.Interface;

public interface BreatheImplementor {
    public void breathingMethod();
}
